.nx/cache/terminalOutputs/1409278270153840110
[0m[7m[1m[31m FAIL [39m[22m[27m[0m [0m[7m[37m np-phaser [39m[27m[0m [2mlibs/np-phaser/src/lib/basics/stage/[22m[1mstage.component.spec.ts[22m
  [1m● [22mTest suite failed to run

    [1m[31mJest encountered an unexpected token[39m[22m

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see [4mhttps://jestjs.io/docs/ecmascript-modules[24m for how to enable it.
     • If you are trying to use TypeScript, see [4mhttps://jestjs.io/docs/getting-started#using-typescript[24m
     • To have some of your "node_modules" files transformed, you can specify a custom [1m"transformIgnorePatterns"[22m in your config.
     • If you need a custom transformation, specify a [1m"transform"[22m option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the [1m"moduleNameMapper"[22m config option.

    You'll find more details and examples of these config options in the docs:
    [36mhttps://jestjs.io/docs/configuration[39m
    For information about custom transformations, see:
    [36mhttps://jestjs.io/docs/code-transformation[39m

    [1m[31mDetails:[39m[22m

    /Users/mpstaerk/Projects/devops/np-leet-hunt/node_modules/phaser3-rex-plugins/plugins/mousewheelscroller-plugin.js:1
    import MouseWheelScroller from './mousewheelscroller.js';
    ^^^^^^

    SyntaxError: Cannot use import statement outside a module

    [0m [90m 1 |[39m [36mimport[39m { inject[33m,[39m [33mInjectable[39m[33m,[39m [33mNgZone[39m } [36mfrom[39m [32m'@angular/core'[39m[33m;[39m
     [90m 2 |[39m [36mimport[39m [33m*[39m [36mas[39m [33mPhaser[39m [36mfrom[39m [32m'phaser'[39m[33m;[39m
    [31m[1m>[22m[39m[90m 3 |[39m [36mimport[39m [33mMouseWheelScrollerPlugin[39m [36mfrom[39m [32m'phaser3-rex-plugins/plugins/mousewheelscroller-plugin'[39m[33m;[39m
     [90m   |[39m [31m[1m^[22m[39m
     [90m 4 |[39m [36mimport[39m [33mShipPlugin[39m [36mfrom[39m [32m'phaser3-rex-plugins/plugins/ship-plugin'[39m[33m;[39m
     [90m 5 |[39m [36mimport[39m [33mStateManagerPlugin[39m [36mfrom[39m [32m'phaser3-rex-plugins/plugins/statemanager-plugin'[39m[33m;[39m
     [90m 6 |[39m [36mimport[39m { [33mBehaviorSubject[39m } [36mfrom[39m [32m'rxjs'[39m[33m;[39m[0m

      [2mat ModuleExecutor.compile ([22m../../node_modules/jest-runtime/build/index.js[2m:2104:44)[22m
      [2mat Object.<anonymous> ([22msrc/lib/service/phaser.service.ts[2m:3:1)[22m
      [2mat Object.<anonymous> ([22msrc/lib/service/stage.service.ts[2m:6:1)[22m
      [2mat Object.<anonymous> ([22msrc/lib/basics/stage/stage.component.ts[2m:4:1)[22m
      [2mat Object.<anonymous> ([22m[0m[36msrc/lib/basics/stage/stage.component.spec.ts[39m[0m[2m:3:1)[22m

[1mTest Suites: [22m[1m[31m1 failed[39m[22m, 1 total
[1mTests:       [22m0 total
[1mSnapshots:   [22m0 total
[1mTime:[22m        1.151 s
[2mRan all test suites[22m[2m.[22m
